# Hatalmas_amoba

./: CMakeLists.txt  benagep.c  benagep.h  esemenyhalo.c  esemenyhalo.h  fo_megjelen.c  fo_megjelen.h  fomenu.c  fomenu.h  jatek.c  jatek.h  jatek_megjelen.c  jatek_megjelen.h  main.c  palya_manage.c  palya_manage.h  play.h  uj.c  uj.h  uj_beolvas.c  uj_beolvas.h  uj_beolvas2.c
audio/: play.c
